# Spectral-Stream-LLM-Engine-

./: .coverage  .gitignore  AGENTS.md  ARCHIVE_AUDIT_REPORT.md  AUDIT_REPORT.md  CASCADE_DIAL_IN_REPORT.md  CMakeLists.txt  LICENSE  MATH_RESEARCH_REPORT.md  README.md  REAL_WORLD_BENCHMARK.md  _decomp_test_new.py  _decomp_test_runner.py  _dial_in_compression.py  _invented_decomp_methods.py  benchmark_industry_comparison.json  benchmark_physics_real_weights.py  compression-roadmap.md  dial_in_cascade.py  dial_in_fast.py  dial_in_real.py  feature_list.md  final_benchmark_results.json  final_compression_log.txt  potential_path.txt  profile_all_methods.py  profile_multitensor_validation.py  pyproject.toml  requirements.txt  run_full_model_honest.py  run_full_model_honest_results.json  stage_diagnosis.json  test_engine_pipeline.py  test_verify_methods.py  validate_multiplicative_cascade.py  wave4_pipeline.py  wave4_results.json
.claude/: CLAUDE.md
.opencode/: opencode.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
configs/: claude_desktop.json  ollama.Modelfile  openai_sdk.py  opencode.json  vllm.json
docs/: ACCEPTABLE_LOSS_RESEARCH.md  ADAPTIVE_LOSS_CONTROL_RESEARCH.md  DYNAMIC_TUNING_RESEARCH.md  INFERENCE.md  KV_CACHE_COMPRESSION_FORMULA_GUIDE.md  KV_CACHE_COMPRESSION_RESEARCH.md  NOVEL_COMPRESSION_METHODS.md  QUANTIZATION.md  memory_hierarchy.md
eval/: __init__.py  artifact.py  constants.py  corpus.py  grader.py  model_path.py  run_eval.py
scripts/: baseline_honest_test.py  benchmark_compression.py  compress_gemma4.py  diagnose_5stage.py  dial_in_spectral.py  e2e_test.py  e2e_validation.py  fetch_eval_corpus.py  final_benchmark.py  global_migration_validate.py  run_5stage_on_model.py  run_5stage_on_weights.py  run_benchmark.py  test_5stage_cascade.py  test_cascade_on_weights.py  test_cascade_results.json  tune_cascade_quality.py  tune_results.json
spectralstream.egg-info/: PKG-INFO  (+3 more)
(+3653 files in other folders)
