[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "spectralstream"
version = "2.0.0"
description = "Pure-Python LLM inference engine with hyperdimensional computing and spectral compression"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "psutil>=5.9",
    "safetensors>=0.4",
    "zstandard>=0.22",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-timeout>=2.0", "rich>=13.0"]
web = ["fastapi>=0.100", "uvicorn>=0.22", "jinja2>=3.1", "python-multipart>=0.0.6", "pydantic>=2.0"]
gguf = ["gguf>=0.6"]
ml = ["scikit-learn>=1.3", "ml-dtypes>=0.3", "torch>=2.0"]
finetune = ["datasets>=2.0"]

[tool.setuptools.packages.find]
include = ["spectralstream*"]

[tool.pytest.ini_options]
timeout = 120
testpaths = ["tests"]
markers = [
    "gemma4: tests requiring Gemma 4 model weights",
    "validation: compression method validation tests",
    "slow: slow tests that take significant time",
]
